# pyds4

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/ds4/: __init__.py  xml.py
src/ds4/core/: common.py  ds.py  dsip.py
